footer spacing fix.

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,8 +81,7 @@ body {
 
 .content {
     width: 100%;
-    /* padding: 40px; */
-    padding-bottom: 100px;
+    padding-bottom: 10vh;
     min-height: 100vh;
     transition: all 0.3s;
     position: absolute;
